--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.5.2",
@@ -18,10 +21,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start-server": "nodemon ./server",
+    "start-server": "nodemon -r dotenv/config ./server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
