--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
@@ -21,6 +22,7 @@
     "passport-facebook-token": "^3.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.3",
     "react-facebook-login": "^4.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
